k8s-manifests/overlay/image-patch.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: coder
  namespace: dev
spec:
  template:
    spec:
      containers:
      - name: coder
        image: nexus.lan:5000/dev-env:2b575224452a0515994adb91987d211797d78a70
