k8s-manifests/overlay/volumes-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-env-cache
  namespace: dev
spec:
  template:
    spec:
      containers:
      - name: sshd
      volumes:
      - name: ssh-key
        secret:
          secretName: git-ssh-key
      - name: ssh-host-key
        secret:
          secretName: cache-ssh-host-key
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coder
  namespace: dev
spec:
  template:
    spec:
      containers:
      - name: coder
      volumes:
      - name: dev-data
        persistentVolumeClaim:
          claimName: dev-data-pvc
      - name: ssh-key
        secret:
          secretName: git-ssh-key
      - name: cache-ssh-host-key
        secret:
          secretName: cache-ssh-host-key
      - name: cache-signing-key
        secret:
          secretName: cache-signing-key
